--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,7 @@
 <script src="https://pass.dog/chai.js"></script>
 <script src="../BigInteger.js"></script>
 <script src="../utils.js"></script>
+<script src="../scrypt.js"></script>
 </head>
 <body>
 	<div id="mocha"><p><a href=".">Index</a></p></div>
