Switch to different BigInt library

--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://pass.dog/mocha.css"/>
 <script src="https://pass.dog/mocha.js"></script>
 <script src="https://pass.dog/chai.js"></script>
-<script src="../BigInteger.js"></script>
+<script src="../bn.js"></script>
 <script src="../utils.js"></script>
 <script src="../scrypt.js"></script>
 </head>
