Add rescue code entry for import

--- a/popup/en.html
+++ b/popup/en.html
@@ -65,6 +65,7 @@ J6eR q83</textarea></label><b title="Show Identity">👁</b><br/>
 
 	<div><input type="radio" name="tab" value="2" id="tab2" checked/><label for="tab2">Import Identity</label><div>
 		<label><span>Identity</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><br/>
+		<label><span>Rescue Code</span><input type="text" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-?){6}"/></label><br/>
 		<label><span></span><button>Import</button></label><br/>
 	</div></div>
 
