Added EnHash function

--- a/test/test.html
+++ b/test/test.html
@@ -16,6 +16,7 @@
 	<div id="fixtures"></div>
 	<script>mocha.setup('bdd')</script>
 	<script src="test_utils.js"></script>
+	<script src="../sodium-asmjs.js"></script>
 	<script>mocha.run();</script>
 </body>
 </html>
