--- a/popup/en.html
+++ b/popup/en.html
@@ -34,7 +34,7 @@ label>span { display: inline-block; width: 150px; vertical-align: top; }
 label>input[type="checkbox"]+span { width: 400px; vertical-align: middle; }
 label>input[type="text"],label>input[type="number"],label>input[type="password"],label>textarea,label>progress { width: 270px; }
 label>textarea { border: 0 none; height: 150px; line-height: 22px; }
-#import label>textarea { height: 300px; }
+#import label>textarea,#export label>textarea { height: 300px; }
 label.pwd>input { width: 380px; }
 label+b { padding: 0 0 0 8px; cursor: pointer; vertical-align: top; display: inline-block; width: 28px; line-height: 22px; }
 label+b:hover { text-shadow: 0 0 4px #FFF; }
@@ -82,7 +82,7 @@ button.failure::after { content: " ❌"; }
 	</div></div>
 
 	<div><input type="radio" name="tab" value="3" id="tab3"/><label for="tab3">Export Identity</label><div>
-		<form id="export" class="notyet">
+		<form id="export">
 			<label><span>Identity</span><textarea name="identity"></textarea></label><b></b><br/>
 		</form>
 	</div></div>
