Support for Fennec

--- a/popup/en.html
+++ b/popup/en.html
@@ -78,7 +78,7 @@ button.failure::after { content: " ❌"; }
 			<label><span>Identity</span><textarea name="identity" placeholder="KbEx Gvz6 bECA Zrq3 HSxg n2cp idwN UnGj eyM7 w7qK mgMg rgs3 DBGf PS8E RbUB kc2S 62AR mhAL caBj gSZt FPVP XDLD QMi9 LcY4 caYY J6eR q83"></textarea></label><b></b><br/>
 			<label><span>Rescue Code</span><input type="password" name="rescuecode" placeholder="1234-5678-9012-3456-7890-1234" pattern="(\d{4}-){5}\d{4}"/></label><br/>
 			<label><span></span><progress value="0"></progress></label><br/>
-			<label><span></span><button>Import (this takes 10s)</button></label><br/>
+			<label><span></span><button>Import</button></label><br/>
 		</form>
 	</div></div>
 
