Made compatible with chrome

--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>SQRL</title>
 <!--link rel="stylesheet" href="chrome://browser/content/extension.css"/-->
-<script src="../sodium-asmjs.js" async></script>
-<script src="../bn.js" async></script>
-<script src="../jQueryLight.js" defer></script>
-<script src="../utils.js" defer></script>
-<script src="../popup.js" defer></script>
+<script src="sodium-asmjs.js" async></script>
+<script src="bn.js" async></script>
+<script src="jQueryLight.js" defer></script>
+<script src="utils.js" defer></script>
+<script src="popup.js" defer></script>
 <style>
 :root { --sqrl-blue: #007CC3; --grey: #7FBDE1; }
 * { box-sizing: border-box; }
