Update UI after import

--- a/popup.html
+++ b/popup.html
@@ -84,7 +84,7 @@ button.failure::after { content: " ❌"; }
 
 	<div><input type="radio" name="tab" value="3" id="tab3"/><label for="tab3">Export Identity</label><div>
 		<form id="export">
-			<label><span>Identity</span><textarea name="identity"></textarea></label><b></b><br/>
+			<label><span>Identity</span><textarea name="identity" readonly></textarea></label><b></b><br/>
 		</form>
 	</div></div>
 
